--- a/app/src/main/res/layout/activity_registration_own_info.xml
+++ b/app/src/main/res/layout/activity_registration_own_info.xml
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
-            android:text="ধর্ম"
+            android:text="ধর্ম*"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
 
