--- a/app/src/main/res/layout/activity_registration_personal_information.xml
+++ b/app/src/main/res/layout/activity_registration_personal_information.xml
@@ -82,7 +82,7 @@
             android:id="@+id/marital_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="বৈবাহিক অবস্থা"
+            android:text="বৈবাহিক অবস্থা*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
             />
@@ -125,7 +125,7 @@
             android:id="@+id/educational_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="শিক্ষাগত যোগ্যতা"
+            android:text="শিক্ষাগত যোগ্যতা*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
             />
@@ -146,7 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="ডিগ্রীর নাম"
+                android:text="ডিগ্রীর নাম*"
                 android:textSize="18dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"/>
@@ -166,7 +166,7 @@
             android:id="@+id/subject_text"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="বিষয়"
+            android:hint="বিষয়*"
             android:textColor="@color/com_facebook_button_background_color_focused_disabled"
             android:padding="10dp"
             android:layout_marginLeft="15dp"
@@ -194,7 +194,7 @@
             android:id="@+id/profession_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="পেশা"
+            android:text="পেশা*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
             />
@@ -295,9 +295,10 @@
             android:id="@+id/religion_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ধর্ম পালন"
+            android:text="ধর্ম পালন*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
+            android:visibility="visible"
             />
         <LinearLayout
             android:id="@+id/religiousStatus"
@@ -308,7 +309,8 @@
             android:layout_marginRight="10dp"
             android:background="@color/white"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/religion_text_view"
@@ -337,9 +339,10 @@
             android:id="@+id/roja_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="রোজা রাখেন"
+            android:text="রোজা রাখেন*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
+            android:visibility="visible"
             />
         <LinearLayout
             android:id="@+id/rojaStatus"
@@ -350,7 +353,8 @@
             android:layout_marginRight="10dp"
             android:background="@color/white"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/roja_text_view"
@@ -379,10 +383,10 @@
             android:id="@+id/hijab_status_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hijab_text"
+            android:text="হিজাব পড়েন?*"
             android:textColor="@color/colorPrimary"
             android:layout_margin="10dp"
-            android:visibility="visible"
+            android:visibility="gone"
             />
         <LinearLayout
             android:id="@+id/hijabStatus"
@@ -394,7 +398,7 @@
             android:background="@color/white"
             android:orientation="horizontal"
             android:weightSum="2"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/hijab_text_view"
@@ -402,7 +406,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="hijab"
+                android:text="হিজাব"
                 android:textSize="18dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"/>
@@ -424,7 +428,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="house title"
+            android:text="আপনার আবসস্থল আছে?*"
             android:textColor="@color/colorPrimary" />
 
 
@@ -446,7 +450,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="house status"
+                android:text="আবসস্থল"
                 android:textSize="18dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"/>
