--- a/app/src/main/res/layout/brother.xml
+++ b/app/src/main/res/layout/brother.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/remove"/>
+            android:src="@drawable/remove"
+            android:layout_marginRight="@dimen/small_margin"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="  নাম*"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName"
         android:padding="10dp"
         android:layout_marginLeft="15dp"
         android:background="@color/white"
@@ -147,8 +149,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="পদবী"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName" android:padding="10dp"
         android:layout_marginLeft="15dp"
         android:background="@color/white"
         android:layout_marginTop="10dp"
@@ -160,8 +162,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="প্রতিষ্ঠান"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName" android:padding="10dp"
         android:layout_marginLeft="15dp"
         android:background="@color/white"
         android:layout_marginRight="10dp"
@@ -243,7 +245,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="  ভাইয়ের স্ত্রীর নাম*"
-            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName"
             android:padding="10dp"
             android:layout_marginLeft="15dp"
             android:background="@color/white"
@@ -326,7 +329,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="পদবী"
-            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName"
             android:padding="10dp"
             android:layout_marginLeft="15dp"
             android:background="@color/white"
@@ -339,7 +343,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="প্রতিষ্ঠান"
-            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName"
             android:padding="10dp"
             android:layout_marginLeft="15dp"
             android:background="@color/white"
