--- a/app/src/main/res/layout/activity_registration_family_info_second_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_second_page.xml
@@ -152,7 +152,8 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/add" />
+                        android:src="@drawable/add"
+                        android:layout_marginRight="@dimen/small_margin"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -260,7 +261,8 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/add" />
+                        android:src="@drawable/add"
+                        android:layout_marginRight="@dimen/small_margin"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -297,7 +299,7 @@
                     android:layout_height="30dp"
                     android:layout_below="@id/recycler_view_other"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="left"
                     android:orientation="horizontal">
 
@@ -311,6 +313,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginTop="10dp"
+                        android:layout_marginLeft="@dimen/small_margin"
                         android:text="আরো যোগ করুন" />
                 </LinearLayout>
 
