--- a/app/src/main/res/layout/other.xml
+++ b/app/src/main/res/layout/other.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="10dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:orientation="vertical">
+
     <LinearLayout
+        android:id="@+id/reject"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:id="@+id/reject"
         android:layout_marginRight="10dp"
-        >
+        android:gravity="right"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/remove"/>
+            android:layout_marginRight="@dimen/small_margin"
+            android:src="@drawable/remove" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="বাদ দিন"
             android:layout_gravity="right"
             android:layout_marginTop="10dp"
-            />
+            android:text="বাদ দিন" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/relational_status_other"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/relation_text_view_other"
-            android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/relation_title_text"
-            android:textSize="18dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="@string/relation_title_text"
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/down_arrow_relation_other"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
+
+
     <LinearLayout
         android:id="@+id/details_info_fields_root_layout"
         android:layout_width="match_parent"
@@ -66,179 +70,179 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-
-    <EditText
-        android:id="@+id/name_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="  নাম*"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
-
-    <LinearLayout
-        android:id="@+id/age_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <TextView
-            android:id="@+id/age_text_view_other"
+        <EditText
+            android:id="@+id/name_other"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="বয়স*"
-            android:textSize="18dp" />
-
-        <ImageView
-            android:id="@+id/down_arrow_age_other"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:background="@color/white"
+            android:hint="  নাম*"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/professonal_status_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <TextView
-            android:id="@+id/profession_text_view_other"
+        <LinearLayout
+            android:id="@+id/age_other"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="পেশা*"
-            android:textSize="18dp" />
-
-        <ImageView
-            android:id="@+id/down_arrow_profession_father"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_marginTop="0dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/age_text_view_other"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="বয়স*"
+                android:textSize="18dp" />
 
-    <LinearLayout
-        android:id="@+id/professonal_group_status_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:weightSum="2">
+            <ImageView
+                android:id="@+id/down_arrow_age_other"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
 
-        <TextView
-            android:id="@+id/profession_group_text_view_other"
-            android:gravity="left"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/professonal_status_other"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"/>
-        <ImageView
-            android:id="@+id/down_arrow_profession_group_other"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/profession_text_view_other"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="পেশা*"
+                android:textSize="18dp" />
 
-    <EditText
-        android:id="@+id/designation_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="পদবী"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+            <ImageView
+                android:id="@+id/down_arrow_profession_father"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
 
-    <EditText
-        android:id="@+id/institution_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="প্রতিষ্ঠান"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/marital_status_other"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <TextView
-            android:id="@+id/marital_text_view_other"
-            android:gravity="left"
+        <LinearLayout
+            android:id="@+id/professonal_group_status_other"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="বৈবাহিক অবস্থা"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"/>
-        <ImageView
-            android:id="@+id/down_arrow_marital_other"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/profession_group_text_view_other"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
+                android:textSize="18dp" />
+
+            <ImageView
+                android:id="@+id/down_arrow_profession_group_other"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/designation_other"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:hint="পদবী"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName" />
+
+        <EditText
+            android:id="@+id/institution_other"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:hint="প্রতিষ্ঠান"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/lblFromName"
+            android:textColorHint="@color/lblFromName" />
+
+        <LinearLayout
+            android:id="@+id/marital_status_other"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/marital_text_view_other"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="বৈবাহিক অবস্থা"
+                android:textSize="18dp" />
+
+            <ImageView
+                android:id="@+id/down_arrow_marital_other"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
