--- a/app/src/main/res/layout/sister.xml
+++ b/app/src/main/res/layout/sister.xml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginTop="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
+
     <LinearLayout
+        android:id="@+id/reject"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:id="@+id/reject"
         android:layout_marginRight="10dp"
-        >
+        android:gravity="right"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/remove"/>
+            android:layout_marginRight="@dimen/small_margin"
+            android:src="@drawable/remove" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="বাদ দিন"
             android:layout_gravity="right"
             android:layout_marginTop="10dp"
-            />
+            android:text="বাদ দিন" />
     </LinearLayout>
+
     <EditText
         android:id="@+id/name_sister"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  নাম*"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:hint="  নাম*"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName" />
 
     <LinearLayout
         android:id="@+id/age_sister"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="0dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
@@ -61,16 +65,14 @@
 
         <ImageView
             android:id="@+id/down_arrow_age_sister"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
-
 
 
     <LinearLayout
@@ -78,8 +80,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
@@ -97,13 +99,12 @@
 
         <ImageView
             android:id="@+id/down_arrow_profession_father"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 
@@ -113,31 +114,31 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/profession_group_text_view_sister"
-            android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
-            android:textSize="18dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/down_arrow_profession_group_sister"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 
@@ -145,27 +146,30 @@
         android:id="@+id/designation_sister"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="পদবী"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:hint="পদবী"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName" />
+
     <EditText
         android:id="@+id/institution_sister"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="প্রতিষ্ঠান"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:hint="প্রতিষ্ঠান"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/lblFromName"
+        android:textColorHint="@color/lblFromName" />
 
 
     <LinearLayout
@@ -173,31 +177,31 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/marital_text_view_sister"
-            android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="বৈবাহিক অবস্থা"
-            android:textSize="18dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="বৈবাহিক অবস্থা"
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/down_arrow_marital_sister"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 </LinearLayout>
