Correct house bangla name spelling

--- a/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
@@ -348,7 +348,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="পাত্রের আবসস্থল আছে কিনা?*"
+                android:text="পাত্রের আবাসস্থল আছে কিনা?*"
                 android:textColor="@color/colorPrimary" />
 
 
