--- a/app/src/main/res/layout/activity_registration_personal_information.xml
+++ b/app/src/main/res/layout/activity_registration_personal_information.xml
@@ -432,7 +432,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="আপনার আবসস্থল আছে?*"
+            android:text="আপনার আবাসস্থল আছে?*"
             android:textColor="@color/colorPrimary" />
 
 
@@ -454,7 +454,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="আবসস্থল"
+                android:text="আবাসস্থল"
                 android:textSize="18dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"/>
