--- a/app/src/main/res/layout/activity_registration_family_info_first_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_first_page.xml
@@ -83,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="বাবা"
+                android:textSize="18sp"
                 android:textColor="@color/colorPrimary" />
 
             <EditText
@@ -201,6 +202,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="মা"
+                android:textSize="18sp"
                 android:textColor="@color/colorPrimary" />
 
             <EditText
