--- a/app/src/main/res/layout/activity_registration_own_info.xml
+++ b/app/src/main/res/layout/activity_registration_own_info.xml
@@ -133,6 +133,7 @@
             android:layout_marginRight="15dp"
             android:background="@color/white"
             android:gravity="top"
+            android:paddingLeft="@dimen/small_padding"
             android:imeOptions="actionDone"
             android:privateImeOptions="nm" />
 
