--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -123,6 +123,7 @@
                         <ImageView
                             android:src="@drawable/camera_icon_2"
                             android:layout_width="30dp"
+                            android:padding="1dp"
                             android:layout_height="match_parent"
                             android:layout_weight="0.44" />
 
@@ -194,6 +195,7 @@
                             <ImageView
                                 android:src="@drawable/camera_icon_2"
                                 android:layout_width="30dp"
+                                android:padding="1dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.44" />
 
@@ -260,6 +262,7 @@
                             <ImageView
                                 android:src="@drawable/camera_icon_2"
                                 android:layout_width="30dp"
+                                android:padding="1dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.44" />
 
